--- a/package.json
+++ b/package.json
@@ -4,9 +4,25 @@
   "description": "Flig (flow in git) is a CLI package to help you and your team work better with a simple git flow",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon",
+    "start": "npx tsc src/index.ts",
+    "build": "npx tsc ./src/index.ts && esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js"
   },
-  "bin": "src/index.js",
+  "bin": {
+    "flig": "dist/index.js"
+  },
   "author": "404answernotfound",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/node": "^18.11.0",
+    "colors": "^1.4.0",
+    "commander": "^9.4.1",
+    "ora": "^6.1.2"
+  },
+  "devDependencies": {
+    "esbuild": "^0.15.11",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.4"
+  }
 }
