--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "flig",
   "version": "1.0.0",
   "description": "Flig (flow in git) is a CLI package to help you and your team work better with a simple git flow",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx ts-node ./src/index.ts",
     "dev:watch": "nodemon",
+    "dev:link": "npm link",
     "start": "npx tsc src/index.ts",
-    "build": "npx tsc ./src/index.ts && esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js"
+    "build": "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/flig.js"
   },
   "engines": {
     "node": ">=16.10.0"
@@ -24,17 +25,18 @@
     "terminal"
   ],
   "bin": {
-    "flig": "dist/index.js"
+    "flig": "dist/flig.js"
   },
   "author": "404answernotfound",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^18.11.0",
     "colors": "^1.4.0",
     "commander": "^9.4.1",
+    "inquirer": "7.3.3",
     "ora": "^6.1.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.0",
     "esbuild": "^0.15.11",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
