Added new commands

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ora": "^6.1.2"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.2",
     "@types/node": "^18.11.0",
     "esbuild": "^0.15.11",
     "nodemon": "^2.0.20",
