--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx ts-node ./src/index.ts",
+    "dev:build": "yarn build && yarn dev:link",
     "dev:watch": "nodemon",
     "dev:link": "npm link",
     "start": "npx tsc src/index.ts",
