--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Flig (flow in git) is a CLI package to help you and your team work better with a simple git flow",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watchAll",
     "dev": "npx ts-node ./src/index.ts",
     "dev:build": "yarn build && yarn dev:link",
     "dev:watch": "nodemon",
@@ -38,9 +40,13 @@
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.2",
+    "@types/jest": "^29.2.2",
     "@types/node": "^18.11.0",
     "esbuild": "^0.15.11",
+    "jest": "^29.3.0",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
